# nautiloidea

./: .gitignore  .gitmodules  CMakeLists.txt  DefaultFrame.h  README.md  RenderCommand.cpp  RenderCommand.h  SimpleIPC.cpp  SimpleIPC.h  main.cpp
Editor/: AutoObject.h  CMakeLists.txt  Editor.cpp  Editor.h  EditorLuaBindings.cpp  EditorLuaBindings.h  Material.cpp  Material.h  Resources.cpp  Resources.h  Shader.cpp  Shader.h  StaticMesh.cpp  StaticMesh.h  Texture.cpp  Texture.h  World.cpp  World.h  WorldLuaBindings.hpp
ExampleExplorer/: AtmosphericScattering.cpp  CMakeLists.txt  ExampleExplorer.cpp  ExampleExplorer.h  ExampleFramework.cpp  ExampleFramework.h  PBRTest.cpp  RemoteRender.cpp  Tessellation.cpp  deps.props  packages.config
ExampleExplorer/shaders/: atmospheric_scattering.hlsl  pbrtest.hlsl  tessellation.hlsl
plugins/: CMakeLists.txt  CameraController.cpp  CameraController.h  ModelLoader.cpp  ModelLoader.h  ProfileWindow.cpp  ProfileWindow.h  deps.props  packages.config
resources/scripts/: class.lua  debugger.lua  dispatcher.lua  globals.lua  gui.lua  main.lua  pass.lua  pipeline.lua  resource_system.lua  resources.lua  string_utils.lua
resources/scripts/editor/: resource_popup.lua  resource_tree.lua  ui.lua  viewport.lua
resources/scripts/resource/: resource_system.lua  resources.lua
resources/shaders/: common.hlsl  scene_ps.hlsl  scene_vs.hlsl
